added style added style sheet added style for body

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="style.css">
 	<title>new title 5:15</title>
+
 </head>
 <body>
 master
